// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoList 单元测试 初始化 快照, undoList 数组 为空 1`] = `
<TodoList>
  <div>
    <Header
      addUndoItem={[Function]}
    >
      <div
        className="header"
      >
        <div
          className="header-content"
        >
          TodoList
          <input
            className="header-input"
            data-test="input"
            onChange={[Function]}
            onKeyUp={[Function]}
            placeholder="Todo"
            value=""
          />
        </div>
      </div>
    </Header>
    <UndoList
      changeStatus={[Function]}
      deleteItem={[Function]}
      handleBlur={[Function]}
      list={Array []}
      valueChange={[Function]}
    >
      <div
        className="undo-list"
      >
        <div
          className="undo-list-title"
        >
          正在进行
          <div
            className="undo-list-count"
            data-test="count"
          >
            0
          </div>
        </div>
        <ul
          className="undo-list-content"
        />
      </div>
    </UndoList>
  </div>
</TodoList>
`;

exports[`TodoList 单元测试 初始化 快照, undoList 数组有值,且不含 input 1`] = `
<TodoList>
  <div>
    <Header
      addUndoItem={[Function]}
    >
      <div
        className="header"
      >
        <div
          className="header-content"
        >
          TodoList
          <input
            className="header-input"
            data-test="input"
            onChange={[Function]}
            onKeyUp={[Function]}
            placeholder="Todo"
            value=""
          />
        </div>
      </div>
    </Header>
    <UndoList
      changeStatus={[Function]}
      deleteItem={[Function]}
      handleBlur={[Function]}
      list={
        Array [
          Object {
            "status": "div",
            "value": "value1",
          },
          Object {
            "status": "div",
            "value": "value2",
          },
        ]
      }
      valueChange={[Function]}
    >
      <div
        className="undo-list"
      >
        <div
          className="undo-list-title"
        >
          正在进行
          <div
            className="undo-list-count"
            data-test="count"
          >
            2
          </div>
        </div>
        <ul
          className="undo-list-content"
        >
          <li
            className="undo-list-item"
            data-test="list-item"
            key="0"
            onClick={[Function]}
          >
            value1
            <div
              className="undo-list-delete"
              data-test="delete-item"
              onClick={[Function]}
            >
              -
            </div>
          </li>
          <li
            className="undo-list-item"
            data-test="list-item"
            key="1"
            onClick={[Function]}
          >
            value2
            <div
              className="undo-list-delete"
              data-test="delete-item"
              onClick={[Function]}
            >
              -
            </div>
          </li>
        </ul>
      </div>
    </UndoList>
  </div>
</TodoList>
`;

exports[`TodoList 单元测试 初始化 快照, undoList 数组有值,且含 input 1`] = `
<TodoList>
  <div>
    <Header
      addUndoItem={[Function]}
    >
      <div
        className="header"
      >
        <div
          className="header-content"
        >
          TodoList
          <input
            className="header-input"
            data-test="input"
            onChange={[Function]}
            onKeyUp={[Function]}
            placeholder="Todo"
            value=""
          />
        </div>
      </div>
    </Header>
    <UndoList
      changeStatus={[Function]}
      deleteItem={[Function]}
      handleBlur={[Function]}
      list={
        Array [
          Object {
            "status": "div",
            "value": "value1",
          },
          Object {
            "status": "input",
            "value": "value2",
          },
        ]
      }
      valueChange={[Function]}
    >
      <div
        className="undo-list"
      >
        <div
          className="undo-list-title"
        >
          正在进行
          <div
            className="undo-list-count"
            data-test="count"
          >
            2
          </div>
        </div>
        <ul
          className="undo-list-content"
        >
          <li
            className="undo-list-item"
            data-test="list-item"
            key="0"
            onClick={[Function]}
          >
            value1
            <div
              className="undo-list-delete"
              data-test="delete-item"
              onClick={[Function]}
            >
              -
            </div>
          </li>
          <li
            className="undo-list-item"
            data-test="list-item"
            key="1"
            onClick={[Function]}
          >
            <input
              autoFocus={true}
              data-test="input"
              onBlur={[Function]}
              onChange={[Function]}
              value="value2"
            />
            <div
              className="undo-list-delete"
              data-test="delete-item"
              onClick={[Function]}
            >
              -
            </div>
          </li>
        </ul>
      </div>
    </UndoList>
  </div>
</TodoList>
`;
